Creating Template Welcome.phtml

--- a/code/Macademy/Jumpstart/Model/view/frontend/templates/welcome.phtml
+++ b/code/Macademy/Jumpstart/Model/view/frontend/templates/welcome.phtml
@@ -3,3 +3,4 @@
 $welcomeMessageViewModel = $block->getData('welcome_message_view_model');
 ?>
 <h1><?= $welcomeMessageViewModel->getWelcomeMessage() ?></h1>
+// template 
